--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.5",
-        "@heroicons/vue": "^2.0.13"
+        "@heroicons/vue": "^2.0.13",
+        "vue-sweetalert2": "^5.0.5"
     }
 }
